--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,3 +116,7 @@ add_executable(SpaceHub_PN_p_test ${TMP_HEADER_FILES} ${PN_P_TEST})
 add_executable(SpaceHub_PN_r_test ${TMP_HEADER_FILES} ${PN_R_TEST})
 
 add_executable(SpaceHub_solar_test ${TMP_HEADER_FILES} ${SOLAR_TEST} test/regression_test/rtest_samples.hpp)
+
+enable_testing()
+
+add_test(UnitTest SpaceHub_unit_test)
