--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ os:
 
 env:
   - BUILD_TYPE=Release
+  - CODECOV_TOKEN="60aa14e6-ecdc-43af-97ed-e98698f3f447"
 
 #jobs:
 #  allow_failures:
@@ -58,6 +59,9 @@ install:
   - echo ${CXX}
   - ${CXX} --version
   - cmake --version
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 script:
   - cmake -E make_directory ./build && cd build
