--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       fail-fast: true
-      maxtrix:
+      matrix:
         os: [ubuntu-latest, macos-latest]
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
@@ -51,6 +51,3 @@ jobs:
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: ctest -C $BUILD_TYPE
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
