--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,8 +5,8 @@ on: [push]
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  CC: ${{matrix.compiler}}
-  CXX: ${{matrix.compiler}}
+  CC: gcc
+  CXX: g++
 
 jobs:
   build:
