--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,8 +5,8 @@ on: [push]
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  #CC: gcc-10
-  #CXX: g++-10
+  CC: gcc-10
+  CXX: g++-10
 
 jobs:
   build:
@@ -19,8 +19,6 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        compiler: [gcc-10, clang-10]
-
     steps:
       - uses: actions/checkout@v2
 
