--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,6 +7,7 @@ env:
   BUILD_TYPE: Release
   CC: gcc-10
   CXX: g++-10
+  CODECOV_TOKEN: "60aa14e6-ecdc-43af-97ed-e98698f3f447"
 
 jobs:
   build:
@@ -49,3 +50,8 @@ jobs:
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: ctest -C $BUILD_TYPE
+
+      - name: CodeCov
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        run: bash <(curl -s https://codecov.io/bash)
