--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,8 +5,8 @@ on: [push]
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  CC: gcc-10
-  CXX: g++-10
+  #CC: gcc-10
+  #CXX: g++-10
   CODECOV_TOKEN: "60aa14e6-ecdc-43af-97ed-e98698f3f447"
 
 jobs:
@@ -20,15 +20,20 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        compiler: [g++-10, clang-10]
     steps:
       - uses: actions/checkout@v2
 
       - name: Create Build Environment
+         evn: 
+          CXX: ${{matrix.compiler}}
         # Some projects don't allow in-source building, so create a separate build directory
         # We'll use this as our working directory for all subsequent commands
         run: cmake -E make_directory ${{github.workspace}}/build
 
       - name: Configure CMake
+         evn: 
+          CXX: ${{matrix.compiler}}
         # Use a bash shell so we can use the same syntax for environment variable
         # access regardless of the host operating system
         shell: bash
@@ -39,6 +44,8 @@ jobs:
         run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
       - name: Build
+         evn: 
+          CXX: ${{matrix.compiler}}
         working-directory: ${{github.workspace}}/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
