--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,8 @@ set(IMPROVEMENT_TEST
 
 add_executable(SpaceHub_simple_test ${TMP_HEADER_FILES} test/regression_test/rtest_basic.cpp)
 
+add_executable(SpaceHub_ABITS_test ${TMP_HEADER_FILES} test/regression_test/rtest_AR_ABITS.cpp)
+
 add_executable(SpaceHub_unit_test ${UNIT_TEST} ${TMP_HEADER_FILES})
 
 add_executable(SpaceHub_kozai_test ${TMP_HEADER_FILES} ${KOZAI_TEST})
